[package]
name = "crc8"
version = "0.2.0"
authors = ["Marcin Kopa <marcin.info@gmail.com>", "Xentec <xentec@aix0.eu>"]

license = "MIT"
description = "A CRC8 implementation"
repository = "https://github.com/mkopa/rust-crc8"
readme = "README.md"
keywords = ["crc", "crc8", "crc-8", "hash", "checksum"]
exclude = [".*"]

[profile.bench]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
debug = false
lto = true
